--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -8,22 +8,67 @@
     android:orientation="vertical"
     tools:context=".FAQFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/faq_recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="32dp"
-        tools:listitem="@layout/faq_recycler_view_question_item"/>
+        android:orientation="vertical">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <com.google.android.material.search.SearchBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchBarFAQ"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="@color/white"
+            android:hint="Search..."/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/faq_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tint="@color/white"
+            android:paddingLeft="28dp"
+            android:paddingRight="28dp"
+            android:paddingBottom="28dp"
+            tools:listitem="@layout/faq_recycler_view_question_item"/>
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/fab_container"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/button"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:ignore="ContentDescription" />
+        android:layout_marginBottom="32dp"
+        app:cardCornerRadius="29dp">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:backgroundTint="@color/button"
+            android:tint="@color/white"
+            app:fabSize="mini"
+            app:rippleColor="@color/background"
+            app:srcCompat="@drawable/baseline_add_24_white"
+            tools:ignore="ContentDescription" />
+
+    </androidx.cardview.widget.CardView>
+
+
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab"-->
+<!--        android:layout_width="58dp"-->
+<!--        android:layout_height="54dp"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_marginEnd="32dp"-->
+<!--        android:layout_marginBottom="32dp"-->
+<!--        android:backgroundTint="@color/button"-->
+<!--        android:tint="@color/white"-->
+<!--        app:fabSize="mini"-->
+<!--        app:srcCompat="@drawable/baseline_add_24_white"-->
+<!--        tools:ignore="ContentDescription" />-->
 
 </FrameLayout>
