--- a/app/src/main/res/layout/fragment_past_events.xml
+++ b/app/src/main/res/layout/fragment_past_events.xml
@@ -12,6 +12,7 @@
         android:id="@+id/past_events_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="28dp"
         tools:layout_weight="1"
         tools:listitem="@layout/past_seminar_recycler_view_item"/>
 
