--- a/app/src/main/res/layout/past_seminar_recycler_view_item.xml
+++ b/app/src/main/res/layout/past_seminar_recycler_view_item.xml
@@ -7,20 +7,19 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:orientation="vertical"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="4dp">
+    app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="398dp"
-            android:layout_height="174dp"
+            android:layout_width="392dp"
+            android:layout_height="172dp"
             app:layout_constraintBottom_toTopOf="@+id/titleTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.333"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/backgroundcheck" />
@@ -56,7 +55,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.026"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
@@ -66,13 +65,11 @@
             android:layout_height="61dp"
             android:layout_gravity="end|center"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/circle"
             android:gravity="center"
             android:text="Feb 24"
             android:textColor="@android:color/white"
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="18dp"
             android:translationX="-18dp"
             android:translationY="-18dp"
             app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
