--- a/app/src/main/res/layout/past_seminar_recycler_view_item.xml
+++ b/app/src/main/res/layout/past_seminar_recycler_view_item.xml
@@ -15,7 +15,7 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="392dp"
+            android:layout_width="394dp"
             android:layout_height="172dp"
             app:layout_constraintBottom_toTopOf="@+id/titleTextView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,16 +28,14 @@
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
             android:text="Title"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
             app:layout_constraintEnd_toStartOf="@+id/circleView"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -45,12 +43,11 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:gravity="start"
-            android:paddingTop="8dp"
             android:text="Description"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -61,18 +58,21 @@
 
         <TextView
             android:id="@+id/circleView"
-            android:layout_width="61dp"
-            android:layout_height="61dp"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
             android:layout_gravity="end|center"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/circle"
+            android:fontFamily="@font/source_serif_pro"
             android:gravity="center"
-            android:text="Feb 24"
+            android:lineSpacingExtra="0sp"
+            android:text="24 Feb"
             android:textColor="@android:color/white"
-            android:textSize="18dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:translationX="-18dp"
             android:translationY="-18dp"
-            app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
+            app:layout_constraintBottom_toBottomOf="@+id/descriptionTextView"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
