--- a/app/src/main/res/layout/faq_recycler_view_question_item.xml
+++ b/app/src/main/res/layout/faq_recycler_view_question_item.xml
@@ -38,8 +38,9 @@
                 android:id="@+id/expandableImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/baseline_add_24"
-                app:tint="@color/button" />
+                android:src="@drawable/baseline_add_24">
+
+            </ImageView>
         </LinearLayout>
 
         <TextView
