--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/background"
     tools:context=".FAQFragment">
 
     <LinearLayout
@@ -14,19 +15,20 @@
         android:orientation="vertical">
 
         <com.google.android.material.search.SearchBar
+            android:id="@+id/searchBarFAQ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/searchBarFAQ"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="36dp"
+            style="@style/CustomSearchBar"
             android:backgroundTint="@color/white"
-            android:hint="Search..."/>
+            android:hint="Search..." />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/faq_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tint="@color/white"
+            android:background="@drawable/search_bar_bg"
             android:paddingLeft="28dp"
             android:paddingRight="28dp"
             android:paddingBottom="28dp"
@@ -47,9 +49,9 @@
             android:id="@+id/fab"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@android:color/white"
             android:backgroundTint="@color/button"
-            android:tint="@color/white"
+            android:tint="@android:color/white"
             app:fabSize="mini"
             app:rippleColor="@color/background"
             app:srcCompat="@drawable/baseline_add_24_white"
