--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/white"
     tools:context=".MainActivity">
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,44 +17,24 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/background"
-            android:theme="@style/CustomToolbarTheme"
+            android:background="@color/toolbar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+<!--            <View-->
+<!--                android:layout_width="2dp"-->
+<!--                android:layout_height="24dp"-->
+<!--                android:background="@android:color/darker_gray"/>-->
 
             <TextView
                 android:id="@+id/toolbar_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@color/toolbar"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </androidx.appcompat.widget.Toolbar>
-
-
-
-        <!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="?attr/colorPrimary"-->
-<!--            android:gravity="center"-->
-<!--            android:textAlignment="center"-->
-<!--            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
-<!--            app:menu="@menu/toolbar_menu"-->
-<!--            app:titleTextAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"-->
-<!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
-
-
-<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
-<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:text="Title"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />&ndash;&gt;-->
-
-
-<!--        </androidx.appcompat.widget.Toolbar>-->
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment"
@@ -76,8 +54,11 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_menu"
-        app:headerLayout="@layout/drawer_header">
+        app:drawerLayoutCornerSize="0dp"
+        app:headerLayout="@layout/drawer_header"
+        app:itemTextAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:itemTextAppearanceActiveBoldEnabled="true"
+        app:menu="@menu/drawer_menu">
 
     </com.google.android.material.navigation.NavigationView>
 
