--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/background"
     tools:context=".FAQFragment">
 
     <LinearLayout
@@ -14,15 +13,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tvForFAQ"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/source_serif_pro_bold"
+            android:padding="8dp"
+            android:text="We’re here to help you with anything and everything"
+            android:textAlignment="textStart"
+            android:textColor="@color/toolbar"
+            android:textSize="20sp"
+            android:textStyle="bold">
+
+        </TextView>
+
         <com.google.android.material.search.SearchBar
             android:id="@+id/searchBarFAQ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginEnd="36dp"
-            style="@style/CustomSearchBar"
-            android:backgroundTint="@color/white"
             android:hint="Search..." />
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/faq_recycler_view"
