--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello, User"
-        android:layout_margin="32dp"
-        android:textSize="24sp"
-        android:textColor="@color/toolbar"/>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="357dp"
-        android:layout_height="350dp"
+        android:layout_width="167dp"
+        android:layout_height="188dp"
         android:layout_gravity="center"
-        android:src="@drawable/_2145584_wavy_edu_03_single_01" />
+        android:src="@drawable/img" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Navigate your study abroad journey effortlessly with our app"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/source_serif_pro_semibold"
+        android:textAlignment="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp">
+
+    </TextView>
 
 
-</FrameLayout>
+</LinearLayout>
