--- a/app/src/main/res/layout/past_seminar_recycler_view_item.xml
+++ b/app/src/main/res/layout/past_seminar_recycler_view_item.xml
@@ -14,9 +14,10 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/pastSeminarIV"
             android:layout_width="394dp"
             android:layout_height="172dp"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/titleTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.333"
@@ -37,7 +38,7 @@
             app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
             app:layout_constraintEnd_toStartOf="@+id/circleView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/pastSeminarIV" />
 
         <TextView
             android:id="@+id/descriptionTextView"
@@ -61,7 +62,8 @@
             android:layout_width="54dp"
             android:layout_height="54dp"
             android:layout_gravity="end|center"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/circle"
             android:fontFamily="@font/source_serif_pro"
             android:gravity="center"
@@ -72,7 +74,7 @@
             android:textStyle="bold"
             android:translationX="-18dp"
             android:translationY="-18dp"
-            app:layout_constraintBottom_toBottomOf="@+id/descriptionTextView"
+            app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
